# doc-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requests_facts.json  requests_facts.yaml  requests_readme.html  requirements.txt  tasktracker-readme.md  test_phase1.py
doc_agent/: agent.py  api.py  main.py
doc_agent/agents/: arch_context.py  diagrammer.py  hld_architect.py  hld_context.py  hld_enrich.py  hld_grounded_architect.py  hld_reviewer.py  lld_agents.py  lld_reviewer.py  qa.py  reviewer.py  writer.py
doc_agent/api/: app.py  index.html
doc_agent/core/: gcp_monitoring.py  llm.py
doc_agent/orchestrators/: hld_pipeline.py  lld_pipeline.py  pipeline.py  qa.py
doc_agent/rag/: indexer.py
doc_agent/retrieval/: indexer.py
doc_agent/tools/: architecture_analyzer.py  architecture_model.py  c4_views.py  component_arch.py  component_clusters.py  container_model.py  dependency_graph.py  diagram_graph.py  diagram_validator.py  extractor.py  import_graph.py  input_resolver.py  language_detector.py  manifest_parser.py  output.py  rich_extractor.py  view_planner.py
doc_agent/workflow/: fidelity_scorer.py  grounding.py  hld_pipeline.py  pipeline.py  (+2 more)
docs/: context_transfer.md  context_transfer_v2.md  context_transfer_v3.md  context_transfer_v4.md  context_transfer_v5.md
marketplace_spec_file/: agent_spec.yaml  ui_spec 1.yaml
tests/: test_component_arch.py  test_component_render_score.py  test_container_model.py  test_dependency_graph.py  test_extractor_hld_signals.py  test_fidelity_scoring.py  test_manifest_parser.py  test_view_planner.py
(+7 files in other folders)
